--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-	<meta charset="utf-8">
-	<title>Embassy Network</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8">
+	<title>调查问卷</title>
 	<!-- responsive support -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="The Embassy Network is a housing network reinventing home for the creative age.">
-	<meta name="author" content="Jessy Kate Schingler">
+	<meta name="description" content="妲妃豚鞋业-调查问卷">
+	<meta name="author" content="妲妃豚">
 
 	<!-- Le styles -->
 	<link href="/media/css/bootstrap.css" rel="stylesheet">
