使用cdn的静态文件

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -87,11 +87,13 @@
 {% endblock %}
 
 {% block extrajs %}
+<!--
 	<script src="/media/js/jquery.collapsible.js"></script>	
 	<script type="text/javascript">
 		$(document).ready(function() {
 			//collapsible management
-			// $('.collapsible').collapsible({defaultOpen: 'response_metadata'});  不用闭合这些选项,所以注释了
+			$('.collapsible').collapsible({defaultOpen: 'response_metadata'});  //不用闭合这些选项,所以注释了
 		});
 	</script>
+-->
 {% endblock %}
