--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,9 @@
 	<meta name="author" content="妲妃豚">
 
 	<!-- Le styles -->
-	<link href="/media/css/bootstrap.css" rel="stylesheet">
+	<link href="http://cdn.bootcss.com/bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/media/css/custom.css" rel="stylesheet">
-	<link href="/media/css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="http://cdn.bootcss.com/bootstrap/2.1.1/css/bootstrap-responsive.min.css" rel="stylesheet">
 
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -49,9 +49,9 @@
 	</footer>
 	<!-- Le javascript -->
 	<link rel="stylesheet" href="/media/css/flick/jquery-ui-1.9.1.custom.css" />    
-	<script src="/media/js/jquery-1.8.2.js"></script>
-	<script src="/media/js/jquery-ui-1.9.1.custom.js"></script>	
-	<script src="/media/js/bootstrap.js"></script>
+	<script src="http://cdn.bootcss.com/jquery/1.8.2/jquery.min.js"></script>
+	<script src="http://cdn.bootcss.com/jqueryui/1.9.1/jquery-ui.min.js"></script>	
+	<script src="http://cdn.bootcss.com/bootstrap/2.1.1/bootstrap.min.js"></script>
 	<script>
 		// use the jquery UI datepicker on all pages with the datepicker class:
 		$(".datepicker").datepicker({ minDate: 0});
