--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 	<![endif]-->
 
 	<!-- Le fav and touch icons -->
-	<link rel="shortcut icon" href="/ico/favicon.ico">
+	<link rel="shortcut icon" href="/media/img/favicon.ico">
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/ico/apple-touch-icon-114-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/ico/apple-touch-icon-72-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon-57-precomposed.png">
@@ -48,7 +48,7 @@
 	</container>
 	</footer>
 	<!-- Le javascript -->
-	<link rel="stylesheet" href="/media/css/flick/jquery-ui-1.9.1.custom.css" />    
+	<link rel="stylesheet" href="http://cdn.bootcss.com/jqueryui/1.11.0/jquery-ui.min.css" />    
 	<script src="http://cdn.bootcss.com/jquery/1.8.2/jquery.min.js"></script>
 	<script src="http://cdn.bootcss.com/jqueryui/1.9.1/jquery-ui.min.js"></script>	
 	<script src="http://cdn.bootcss.com/bootstrap/2.1.1/bootstrap.min.js"></script>
