--- a/templates/survey.html
+++ b/templates/survey.html
@@ -11,45 +11,7 @@
 <div>
 	<form action="/survey/{{survey.id}}/" method="post">{% csrf_token %}
 
-		<h3 class="collapsible" id="response_metadata">Response Metadata<span></span></h3>
-		<div class="category-container">
-
-		<div class="field-wrapper question-required">
-			{{ response_form.interviewer.errors }}
-			<span class="asterix"> * </span>{{ response_form.interviewer.label_tag }}
-			<span class="form-help-text">{{ response_form.interviewer.help_text}}</span>
-			<div class="form-field-body">
-				{{ response_form.interviewer }}
-			</div>
-		</div>
-
-		<div class="field-wrapper question-required">
-			{{ response_form.interviewee.errors }}
-			<span class="asterix"> * </span>{{ response_form.interviewee.label_tag }}
-			<span class="form-help-text">{{ response_form.interviewee.help_text}}</span>
-			<div class="form-field-body">
-				{{ response_form.interviewee }}
-			</div>
-		</div>
-
-		<div class="field-wrapper">
-			{{ response_form.conditions.errors }}
-			{{ response_form.conditions.label_tag }}
-			<span class="form-help-text">{{ response_form.conditions.help_text}}</span>
-			<div class="form-field-body">
-				{{ response_form.conditions }}
-			</div>
-		</div>
-
-		<div class="field-wrapper">
-			{{ response_form.comments.errors }}
-			{{ response_form.comments.label_tag }}
-			<span class="form-help-text">{{ response_form.comments.help_text}}</span>
-			<div class="form-field-body">
-				{{ response_form.comments }}
-			</div>
-		</div>
-	</div>
+		
 
 		<ol class="survey-questions">
 		{% for category in categories %}
@@ -79,6 +41,39 @@
 		{% endfor %}
 		</ol>
 
+		<h3 class="collapsible" id="response_metadata">联系方式<span></span></h3>
+		<div class="category-container">
+
+		<div class="field-wrapper question-required">
+			{{ response_form.name.errors }}
+			<span class="asterix"> * </span>{{ response_form.name.label_tag }}
+			<span class="form-help-text">{{ response_form.name.help_text}}</span>
+			<div class="form-field-body">
+				{{ response_form.name }}
+			</div>
+		</div>
+
+		<div class="field-wrapper question-required">
+			{{ response_form.phone_number.errors }}
+			<span class="asterix"> * </span>{{ response_form.phone_number.label_tag }}
+			<span class="form-help-text">{{ response_form.phone_number.help_text}}</span>
+			<div class="form-field-body">
+				{{ response_form.phone_number }}
+			</div>
+		</div>
+
+		<div class="field-wrapper question-required">
+			{{ response_form.email.errors }}
+			<span class="asterix"> * </span>{{ response_form.email.label_tag }}
+			<span class="form-help-text">{{ response_form.email.help_text}}</span>
+			<div class="form-field-body">
+				{{ response_form.email }}
+			</div>
+		</div>
+
+
+		
+	</div>
 		<div class="submit-button"><input type="submit" value="提交!"></div>
 	</form>
 
