加入了用户追踪和邀请函

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -2,5 +2,5 @@
 
 {% block body %}
 
-Thanks! Your confirmation code is {{uuid}}. Use this to refer to your response. In case you have any questions, contact {{ email }}
+谢谢！您的反馈已进入我司数据库，我们将在5个工作日内审阅您的反馈，每一个认真反馈的用户我们都将赠送一份礼物。如果有任何疑问，欢迎联系{{email}}
 {% endblock %}
