--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div>
-	<a href="/survey/1">Take the Survey</a> || 
+	<a href="/survey/1/">Take the Survey</a> || 
 	<a href="/privacy/">Read the Privacy Statement</a>
 </div>
 </div>
