--- a/templates/invite.html
+++ b/templates/invite.html
@@ -10,6 +10,7 @@
 
 <div class="survey-description">
     {{survey.description|safe}}
+
 </div>
 
 
@@ -63,40 +64,10 @@
         {% endfor %}
         </ol>
 
-        <h3 class="collapsible" id="response_metadata">联系方式<span></span></h3>
-        <div class="category-container">
-
-        <div class="field-wrapper question-required">
-            {{ response_form.name.errors }}
-            <span class="asterix"> * </span>{{ response_form.name.label_tag }}
-            <span class="form-help-text">{{ response_form.name.help_text}}</span>
-            <div class="form-field-body">
-                {{ response_form.name }}
-            </div>
-        </div>
-
-        <div class="field-wrapper question-required">
-            {{ response_form.phone_number.errors }}
-            <span class="asterix"> * </span>{{ response_form.phone_number.label_tag }}
-            <span class="form-help-text">{{ response_form.phone_number.help_text}}</span>
-            <div class="form-field-body">
-                {{ response_form.phone_number }}
-            </div>
-        </div>
-
-        <div class="field-wrapper question-required">
-            {{ response_form.email.errors }}
-            <span class="asterix"> * </span>{{ response_form.email.label_tag }}
-            <span class="form-help-text">{{ response_form.email.help_text}}</span>
-            <div class="form-field-body">
-                {{ response_form.email }}
-            </div>
-        </div>
 
 
         
     </div>
-        <div class="submit-button"><input type="submit" value="提交!"></div>
     </form>
 
 </div>
@@ -107,13 +78,18 @@
     <script src="/media/js/qrcode.min.js"></script>  
     <script type="text/javascript">
         $(document).ready(function() {
+            var cur_url = location.origin + "{{url|safe}}"
             new QRCode(document.getElementById("qrcode"), {
-                        text: location.origin + "{{url|safe}}",
+                        text: cur_url,
                         width: 100,
                         height: 100
                         }
 
                 );
+            var invite = $("#invite_url")[0];
+            invite.href = cur_url;
+            invite.target = "blank";
+            invite.text = cur_url;
         });
     </script>
 {% endblock %}
